# lm-playground

./: .gitignore  README.md  env-test.ipynb  main.py  pyproject.toml
agent-exp/: main.py  pyproject.toml  response-example.py
agent-exp/src/: main.py
agent-exp/src/agent/: __init__.py  agent.py  atri_agent.py  mcp_client.py
aicmd/: README.md  pydantic_aicmd.py  pyproject.toml
aicmd/aicmd/: pydantic_aicmd.py
atri-memory/: .gitignore  analyze.ipynb  dialogs.ipynb
mcp-exp/: pyproject.toml
mcp-exp/prompts/: cline.act.2602.md  cline.act.2602.zh.md  cursor.agent.cli.2508.md  cursor.agent.cli.2508.zh.md  trae.builder.2508.md  trae.builder.2508.zh.md
mcp-exp/src/atri-mcp/: atri_mcp.py
mcp-exp/src/llm-logger/: llm_logger.py
mcp-exp/src/mcp-logger/: mcp_logger.py
pkg-exp/flat-layout/: pyproject.toml
pkg-exp/flat-layout/flat_example/: __init__.py  core.py  sub.py
pkg-exp/src-layout/: pyproject.toml
pkg-exp/src-layout/src/src_example/: __init__.py  core.py  sub.py
qwen3-tts/: main.ipynb
qwen3-tts-exp/: main.ipynb  main.py
