[project]
name = "lm-playground"
version = "0.1.0"
description = "Test and play with LMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "qwen-tts>=0.0.5",
    "flash-attn",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pydantic-ai>=1.51.0",
]

[tool.uv.workspace]
members = [
    "aicmd"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.9.0cxx11abiFALSE-cp312-cp312-win_amd64.whl" }
