[project]
name = "agent-exp"
version = "0.1.0"
description = "Agent example"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "openai>=2.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agent",
]
