[project]
name = "mcp-exp"
version = "0.1.0"
description = "MCP example"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/atri-mcp",
    "src/mcp-logger",
]
