[project]
name = "flat_example"
version = "0.1.0"
description = "Flat layout project example"
requires-python = ">=3.12"
dependencies = [
    "plotext>=5.3.2",
]

[project.scripts]
flat_plot = "flat_example.core:plot_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flat_example"]
