[project]
name = "src_example"
version = "0.1.0"
description = "Src layout project example"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.2",
]

[project.scripts]
src_process = "src_example.core:process_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/src_example"]
